--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -12,7 +12,9 @@ head
   link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7', crossorigin='anonymous')
   link(rel='stylesheet', type='text/css', href='../static/css/style.css')
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.js")
+  script(type="application/javascript", src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit")
   script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.min.js')
+  script(type='text/javascript', src='../static/scripts/angular-recaptcha.js')
   script(type="application/javascript", src="https:////ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.js")
   script(type="application/javascript", src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js")
   script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
