--- a/views/includes/game-center.jade
+++ b/views/includes/game-center.jade
@@ -1,14 +1,19 @@
 .gamecenter(ng-controller='listCtrl as list')
   .row.addtolist
       .col-md-offset-2.col-md-8
-        .form-show
-          form.form-inline
+        div.center(ng-show="postSuccess") 
+          span.glyphicon.glyphicon-ok
+          p Added to list!
+        div.dupe.center(ng-show="isDuplicate") That username already exists in the list.
+        .form-show(ng-show="!postSuccess")
+          p(ng-show="postError", ng-click="errorHandler()").center {{errMessage}}
+          form(name="newuserForm", ng-submit="newuserForm.$valid && !isDuplicate && addUser()" novalidation).form-inline
             .form-group
-              input.form-control(type='text', placeholder="Game Center Name", ng-model='listCtrl.friendlist.username', ng-maxlength='30', ng-init="listCtrl.friendlist.game_id=this.gameId")
-              input.form-control(type='text', placeholder='Short Message', ng-model='listCtrl.friendlist.message', ng-maxlength='140')
-              input.form-control(type='submit', value='Join List', ng-click="addUser()")
-              //-TODO: add user to list - hide join form - add captcha.
-              //-TODO: Get it ready to upload to github
+              input.form-control(type='text', placeholder="Game Center Name", ng-model='listCtrl.friendlist.username' ng-change="checkForDupes()", ng-maxlength='30', ng-init="listCtrl.friendlist.game_id=this.gameId", ng-class="{'formerror': isDuplicate == true}" required)
+              input.form-control(type='text', placeholder='Short Message', ng-model='listCtrl.friendlist.message', ng-maxlength='140' required)
+              div.recaptcha(vc-recaptcha, ng-show='listCtrl.friendlist.username.length || listCtrl.friendlist.message.length' theme='dark', key="'6LdN3hwTAAAAAGV-iygBG_RA1XpSQ0AWsdjE0wEO'", ng-model="listCtrl.friendlist.recaptchaResponse")
+              input.form-control(type='submit', value='Join List')
+
               //-TODO: single page app reddit multi TIME!
     .row(ng-show='listCtrl.friendlist.username.length || listCtrl.friendlist.message.length')
       .col-md-offset-2.col-md-8
@@ -26,15 +31,15 @@
                 th
                   | Username (Characters Left: {{30 - listCtrl.friendlist.username.length}})
                 th
-                  | Requests (Characters Left: {{140 - listCtrl.friendlist.message.length}})
-                th.center Submit
+                  | Optional Message (Characters Left: {{140 - listCtrl.friendlist.message.length}})
+                th.center Added
             tbody
               tr
                 td {{listCtrl.friendlist.username}}
                 td {{listCtrl.friendlist.message}}
                 td.center
-                  button.btn.btn-default.btn-xs(type='button', ng-click="addUser()")
-                    span.glyphicon.glyphicon-plus
+                  button.btn.btn-default.btn-xs(ng-click="addUser()")
+                    span.glyphicon.glyphicon-ok
     .row
       .col-md-offset-2.col-md-8
         .table-responsive
@@ -45,7 +50,7 @@
             thead
               tr
                 th Username
-                th Requests
+                th Message
                 th.center Added
             tbody
               tr(ng-repeat='user in friendlist.friendlist')
