--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -13,9 +13,6 @@ head
   link(rel='stylesheet', type='text/css', href='../static/css/style.css')
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.js")
   script(type="application/javascript", src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit")
-  script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.min.js')
-  script(type='text/javascript', src='../static/scripts/angular-recaptcha.js')
-  script(type="application/javascript", src="https:////ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.js")
-  script(type="application/javascript", src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js")
   script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
-  script(type='text/javascript', src='../static/scripts/app.js')
+  script(type='text/javascript', src='../static/scripts/vendor.bundle.js')
+  script(type='text/javascript', src='../static/scripts/friendlist.bundle.js')
