--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -16,3 +16,4 @@ head
   script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
   script(type='text/javascript', src='../static/scripts/vendor.bundle.js')
   script(type='text/javascript', src='../static/scripts/friendlist.bundle.js')
+  //-TODO: add jquery & bootstrap to webpack
